dead in december
[Intro]
Oh-woah-woah-woah-woah-woah
Woah-woah-woah-woah-woah

[Chorus]
You say you’re fuckin' sad, well I'm sad too, yeah
She ask why I do it say; "I had to," yeah
Baby, you can't get another chance, ooh yeah
You will never get me again, ooh yeah
Hit me on my phone, but I won't pick up
I don't love these hoes and I won't switch up
Half-moon clip, shoot the whole bitch up
44 mag, keep the whole bitch tucked

[Verse 1]
When I was young
Everybody left me in the cold
Everybody left me all alone
Mama told me, "get it on your own,"
Got it on my own

[Pre-Chorus]
In my own lane and you can't say shit
Workin' all day, no half-day shit
Waitin' all my life, don't have patience
Goin' all the way, no halfway shit
See upcoming rap shows
Get tickets for your favorite artists
You might also like
snow
convolk
lonewolf
convolk
i wanna die
convolk
[Chorus]
You say you’re fuckin' sad, well I'm sad too, yeah
She ask why I do it say; "I had to," yeah
Baby, you can't get another chance, ooh yeah
You will never get me again, ooh yeah
Hit me on my phone, but I won't pick up
I don't love these hoes and I won't switch up
Half-moon clip, shoot the whole bitch up
44 mag, keep the whole bitch tucked

[Verse 2]
You’re never there
I don’t care
Baby, I do what the fuck I want now
Started blowing up, bitch, I'm up now
She ride me like emotions, that's up and down
I’m never there
No one cares
Baby, I think I should fuckin' jump now
People screamin' at me, I can't hear sound
Now they at my shows, king without a crown
Everybody hate me 'cause I'm me
But who the fuck else I'ma be?
And if she leave me, then she geekin'
I ain't even care, 'cause this my season, yeah
[Pre-Chorus]
In my own lane and you can't say shit
Workin' all day, no half-day shit
Waitin' all my life, don't have patience
Goin' all the way, no halfway shit

[Chorus-Extended]
You say you’re fuckin' sad, well I'm sad too, yeah
She ask why I do it say; "I had to," yeah
Baby, you can't get another chance, ooh yeah
You will
